Fixed my background issue of it not showing up anymore.

--- a/Week2/Gold/css/style.css
+++ b/Week2/Gold/css/style.css
@@ -10,7 +10,7 @@ Date: 08-09-2012
 #charset "utf-8";
 
 * {
-	background-color: #CCFFCC;
+	background: #CCFFCC;
 }
 
 body {
@@ -19,7 +19,7 @@ body {
 	padding: 0px;
 	/*max-width: 640px;*/
 	text-align: center;
-	background-color: #CCFFCC;
+	background: #CCFFCC;
 }
 
 header {
@@ -53,6 +53,10 @@ article {
 	line-height: 1.0em;
 	letter-spacing: .001em;
 	text-align: center;
+}
+
+div#petsearchbrowse {
+	background: #CCFFCC;
 }
 
 article#KoolPetForm {
